--- a/w1justin/justin.html
+++ b/w1justin/justin.html
@@ -44,17 +44,22 @@
         }
 
         .image-placeholder {
-            background-color: #e0e0e0;
             width: 100%;
             padding-top: 100%; /* Aspect ratio of 1:1 */
             position: relative;
-            text-align: center;
-            color: #888;
-            font-size: 18px;
+            overflow: hidden;
             border-radius: 4px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .image-placeholder img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ensure the image covers the entire placeholder */
+            transform: translate(-50%, -50%);
         }
 
         .background {
@@ -67,7 +72,7 @@
             background-size: cover;
             background-position: center;
             transform: translate(-50%, -50%) rotate(0deg);
-            animation: rotateBackground 10s linear infinite;
+            animation: rotateBackground 7s linear infinite;
             z-index: 1;
             pointer-events: none; /* Prevents background from interfering with content */
         }
@@ -104,12 +109,12 @@
             Justin Bieber is a Canadian singer, songwriter, and multi-instrumentalist. Discovered at a young age on YouTube, he quickly rose to global fame with his debut single "Baby". Known for his unique voice and hit songs like "Sorry" and "Love Yourself", Bieber has become one of the most influential pop artists of his generation.
         </p>
         <div class="image-gallery">
-            <div class="image-placeholder">Image 1</div>
-            <div class="image-placeholder">Image 2</div>
-            <div class="image-placeholder">Image 3</div>
-            <div class="image-placeholder">Image 4</div>
-            <div class="image-placeholder">Image 5</div>
-            <div class="image-placeholder">Image 6</div>
+            <div class="image-placeholder"><img src="justinfandom/justin1.jpg" alt="Justin 1"></div>
+            <div class="image-placeholder"><img src="justinfandom/justin2.jpg" alt="Justin 2"></div>
+            <div class="image-placeholder"><img src="justinfandom/justin3.jpg" alt="Justin 3"></div>
+            <div class="image-placeholder"><img src="justinfandom/justin4.jpg" alt="Justin 4"></div>
+            <div class="image-placeholder"><img src="justinfandom/justin5.jpg" alt="Justin 5"></div>
+            <div class="image-placeholder"><img src="justinfandom/justin6.jpg" alt="Justin 6"></div>
         </div>
         <div class="video-container">
             <iframe src="https://www.youtube.com/embed/kffacxfA7G4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
