Update Readme and index.html layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1>Hello! I'm Daryl</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Daryl</title>
+
+    <style>
+
+    </style>
+</head>
+<body>
+    <!-- Things to add 
+    1. A title at the top 
+    2. Icons for my various socials 
+    3. 3 empty columns
+    4. Footer
+    Taking inspiration from https://www.fiveoutofnine.com/ -->
+
+
+
+</body>
+</html>
