--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar primarycolour border-bottom border-body">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="../Darveloper1.github.io/statics/remiliogo.png" alt="remilio" width="24" height="24">
+            <img src="statics/remiliogo.png" alt="remilio" width="24" height="24">
             Daryl Yeo
 
           </a>
